♻️ refactor: 코드 스타일, 컨벤션에 맞게 코드 수정
- facadeService가 repository를 직접 참조하지 않도록 수정
- 코드 체크스타일에 맞게 수정

Ref. #S14P11A704-212